# angular-wasm-sample

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  build.sh  package.json
src/: BUILD.bazel
src/app/: BUILD.bazel  app.component.ts  app.module.ts  friends-list.component.ts  index.html  main.ts  server.ts  tsconfig.json
src/app/spreadsheet/: BUILD.bazel  cell.ts  row.ts  spreadsheet.module.ts  spreadsheet.ts  spreadsheetModel.ts
src/app/wasm/: friends.js  friends.wasm  wasm-module.js  wasm-module.wasm
src/friend/: friend.cpp  show-friends.cpp
src/model/: BUILD.bazel  person.proto
src/modules/: add-numbers.cpp  get-address.cpp  get-cars.cpp  spreadsheet.cpp
src/modules/friends/: friend.h  friends.cpp  friends.h  show-friends.cpp
